--- a/views/index.html
+++ b/views/index.html
@@ -1,21 +1,27 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<ul id="messages"></ul>
-<form>
-  <input id="m" autocomplete="off" /><button>Send</button>
+<div>
+  <ul id="messages"></ul>
+</div>
+<form id="chat">
+  <input id="chatMessage" autocomplete="off">
+  <button>Send</button>
 </form>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
 <script>
   var socket = io();
-  $('form').submit(function(e){
-    socket.emit('chat message', $('#m').val());
-    $('#m').val('');
-    return false;
+  var chat = document.getElementById('chat');
+  chat.addEventListener('submit', function(e) {
+    var message = document.getElementById('chatMessage');
+    socket.emit('chat message', message.value);
+    message.value = '';
+    e.preventDefault();
   });
-  socket.on('chat message', function(msg){
-    $('#messages').append($('<li>').text(msg));
+  socket.on('chat message', function(msg) {
+    var item = document.createElement('li');
+    item.innerHTML = msg;
+    document.getElementById('messages').appendChild(item);
   });
 </script>
 {% endblock %}
