--- a/public/stylesheets/css/chat.css
+++ b/public/stylesheets/css/chat.css
@@ -1,6 +1,15 @@
 html, body {
   height: 100%;
 }
+#nicknamewrap {
+  width: 100%;
+  height: 100%;
+}
+#wrap {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
 * { margin: 0; padding: 0; box-sizing: border-box; }
 body { font: 13px Helvetica, Arial; }
 form { background: #000; padding: 3px; width: 100%; }
