add notification for new client joining

--- a/public/stylesheets/css/chat.css
+++ b/public/stylesheets/css/chat.css
@@ -9,3 +9,16 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
 #messages { list-style-type: none; margin: 0; padding: 0; }
 #messages li { padding: 5px 10px; }
 #messages li:nth-child(odd) { background: #eee; }
+
+.chatPage {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.hidden {
+  display: none;
+}
+#messagewrapper {
+  overflow-y: auto;
+  flex: 1;
+}
