--- a/public/stylesheets/css/chat.css
+++ b/public/stylesheets/css/chat.css
@@ -8,8 +8,26 @@ form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
 form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
 #messages { list-style-type: none; margin: 0; padding: 0; }
 #messages li { padding: 5px 10px; }
-#messages li:nth-child(odd) { background: #eee; }
 
+.chatWrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+#headBar {
+  width: 100%;
+  height: 4em;
+  background-color: #000;
+  border: solid black 1px;
+  border-radius: 0;
+  padding: 0;
+  margin: 0;
+}
+#contentWrapper {
+  flex: 1;
+}
 .chatPage {
   height: 100%;
   display: flex;
@@ -17,6 +35,12 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
 }
 .hidden {
   display: none;
+}
+.close {
+  height: 4em;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 #messagewrapper {
   overflow-y: auto;
@@ -29,7 +53,8 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #000
+  background-color: #000;
+  margin: 0;
 }
 
 .userNameInput {
@@ -44,4 +69,14 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
 }
 .userNameInput::placeholder {
   color: white;
+}
+
+.userWritten {
+  background: blue;
+  color: white;
+}
+
+.othersWritten {
+  background: #fff;
+  color: black;
 }
