--- a/public/stylesheets/css/chat.css
+++ b/public/stylesheets/css/chat.css
@@ -3,29 +3,55 @@ html, body {
 }
 * { margin: 0; padding: 0; box-sizing: border-box; }
 body { font: 13px Helvetica, Arial; }
-form { background: #000; padding: 3px; width: 100%; }
-form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+form {
+  background: #fff;
+  padding: 5px;
+  width: 515px;
+  flex-shrink: 0;
+  border: solid #a3a3a3 1px;
+}
+form input {
+  width: 90%;
+  padding: 5%;
+  background: #fff;
+  color: black;
+  border: none;
+  outline: none;
+}
+form input::placeholder {
+  color: #4b4f56;
+}
 #messages { list-style-type: none; margin: 0; padding: 0; }
 #messages li { padding: 5px 10px; }
-
-.chatWrapper {
-  height: 100%;
-  width: 100%;
+.fnWrap{
+  height: 520px;
+  width: 515px;
+  position: fixed;
+  bottom: 0;
   display: flex;
   flex-direction: column;
+  background: #fff;
+}
+.chatWrapper {
+  height: 512px;
+  width: 515px;
+  border-left: solid #a3a3a3  1px;
+  border-right: solid #a3a3a3  1px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
 }
 
 #headBar {
   width: 100%;
   height: 4em;
   flex-shrink: 0;
-  position: sticky;
-  background-color: #000;
-  border: solid black 1px;
+  background-color: rgb(19, 207, 19);
+  border: none;
   border-radius: 0;
   padding: 0;
-  margin: 0
+  margin: 0;
+  outline: none;
 }
 #headBar:hover{
   cursor: pointer;
@@ -45,6 +71,10 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
   height: 4em;
   position: fixed;
   bottom: 0;
+  width: 515px;
+}
+.webPage {
+  height: 200%;
   width: 100%;
 }
 #messagewrapper {
@@ -58,30 +88,41 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #000;
+  background-color: #fff;
   margin: 0;
 }
 
 .userNameInput {
-  font-size: 2em;
-  width: 20em;
-  height: 2em;
-  background: #000;
-  color: white;
+  font-size: 1.5em;
+  width: 256px;
+  height: 128px;
+  background: #fff;
+  color: black;
   border: none;
-  border-bottom: solid blue 3px;
   outline: none;
 }
 .userNameInput::placeholder {
-  color: white;
+  color: #a3a3a3;
 }
 
 .userWritten {
-  background: blue;
-  color: white;
+  float: right;
+  width: 75%;
+  text-align: left;
+  background: rgb(19, 207, 19);
+  color: #fff;
+  padding: 10%;
+  margin: 1px;
+  border-radius: 5px;
 }
 
 .othersWritten {
-  background: #fff;
-  color: black;
+  float: left;
+  width: 75%;
+  background: #bababa;
+  color: #000;
+  text-align: left;
+  padding: 10%;
+  margin: 1px;
+  border-radius: 5px;
 }
