--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,8 @@
 {% extends "home.html" %}
 
 {% block chatwidget %}
-  <div id="fnWrap" class="fnWrap">
+<div id="root"></div>
+  <!-- <div id="fnWrap" class="fnWrap">
    <input id="headBar" type="button" onclick="closeChat()"/>
    <div id="chatWrapper" class="chatWrapper">
      <div id="contentWrapper">
@@ -21,105 +22,8 @@
    <form id="chat" class="hidden">
     <input id="chatMessage" autocomplete="off" placeholder="Write something...">
    </form>
-  </div>
+  </div> -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
-<script>
-function closeChat() {
-  if (document.getElementById('contentWrapper').classList.contains('hidden')) {
-    document.getElementById('fnWrap').classList.add('fnWrap');
-    document.getElementById('fnWrap').classList.remove('close');
-    document.getElementById('contentWrapper').classList.remove('hidden');
-    document.getElementById('chatWrapper').classList.remove('hidden');
-    document.getElementById('chatWrapper').classList.add('chatWrapper');
-  }
-  else {
-    document.getElementById('fnWrap').classList.remove('fnWrap');
-    document.getElementById('fnWrap').classList.add('close');
-    document.getElementById('contentWrapper').classList.add('hidden');
-    document.getElementById('chatWrapper').classList.remove('chatWrapper');
-    document.getElementById('chatWrapper').classList.add('hidden');
-  }
-}
-document.addEventListener('DOMContentLoaded', function () {
-  //Login variables
-  var chatWrap = document.getElementById('chatWrapper');
-  var loginPage = document.getElementById('loginPage');
-  var usernameInput = document.getElementById('usernameInput');
-
-  var messageWrapper = document.getElementById('messagewrapper');
-  var messages = document.getElementById('messages');
-  var inputMessage = document.getElementById('chatMessage');
-  var chatPage = document.getElementById('chatPage');
-  var chat = document.getElementById('chat');
-  var headBar = document.getElementById('headBar');
-
-  var username;
-
-  usernameInput.addEventListener('keypress', function(e) {
-    if (e.keyCode === 13) {
-      if (usernameInput.value) {
-        username = usernameInput.value;
-        loginPage.classList.remove('loginPage');
-        loginPage.classList.add('hidden');
-        chatPage.classList.remove('hidden');
-        chat.classList.remove('hidden');
-        inputMessage.focus();
-        socket.emit('add user', usernameInput.value);
-        socket.emit('user joined');
-      }
-    }
-  });
-  var socket = io();
-
-  chat.addEventListener('submit', function(e) {
-    socket.emit('chat message', inputMessage.value, socket.id);
-    inputMessage.value = '';
-    e.preventDefault();
-  });
-
-  //This is called when a user joins
-  socket.on('user joined', function (data) {
-    var joinedUser = document.createElement('li');
-    joinedUser.innerHTML = data.prefix + data.username + data.postfix;
-
-    // Determine if we should scroll to bottom after inserting the message.
-    var atBottom = false;
-    if ((chatWrap.scrollHeight - chatWrap.scrollTop - chatWrap.clientHeight) < 50) {
-      atBottom = true;
-    }
-
-    // Add the message item to the list and, maybe, scroll to bottom.
-    document.getElementById('messages').appendChild(joinedUser);
-    if (atBottom == true) {
-      chatWrap.scrollTo(0, chatWrap.scrollHeight);
-    }
-  });
-
-  // This is called when the server emits 'chat message', when it has received a message.
-  // Not called when the client emits 'chat message'.
-  socket.on('chat message', function(data) {
-    // Create a new item in the chat list
-    var item = document.createElement('li');
-    if (socket.id == data.sId) {
-      item.classList.add('userWritten');
-    } else {
-      item.classList.add('othersWritten');
-    }
-    item.innerHTML = data.username + ": " + data.message;
-
-    // Determine if we should scroll to bottom after inserting the message.
-    var atBottom = false;
-    if ((chatWrap.scrollHeight - chatWrap.scrollTop - chatWrap.clientHeight) < 50) {
-      atBottom = true;
-    }
-
-    // Add the message item to the list and, maybe, scroll to bottom.
-    document.getElementById('messages').appendChild(item);
-    if (atBottom == true) {
-      chatWrap.scrollTo(0, chatWrap.scrollHeight);
-    }
-  });
-});
-</script>
+<script type="text/babel" src="js/chat.js"></script>
 {% endblock %}
