--- a/views/layout.html
+++ b/views/layout.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
     <link rel='stylesheet' href='stylesheets/css/layout.css'>
     <link rel="stylesheet" href="/stylesheets/css/chat.css">
