--- a/public/stylesheets/css/chat.css
+++ b/public/stylesheets/css/chat.css
@@ -1,24 +1,3 @@
-
-form {
-  background: #fff;
-  padding: 5px;
-  width: 260px;
-  flex-shrink: 0;
-  border: solid #a3a3a3 1px;
-}
-form input {
-  width: 90%;
-  padding: 5%;
-  background: #fff;
-  color: black;
-  border: none;
-  outline: none;
-}
-form input::placeholder {
-  color: #4b4f56;
-}
-#messages { list-style-type: none; margin: 0; padding: 0; }
-#messages li { padding: 5px 10px; }
 .fnWrap{
   height: 330px;
   width: 260px;
@@ -28,19 +7,11 @@ form input::placeholder {
   flex-direction: column;
   background: #fff;
 }
-.chatWrapper {
-  height: 330px;
-  width: 260px;
-  border-left: solid #a3a3a3  1px;
-  border-right: solid #a3a3a3  1px;
-  display: flex;
-  flex-direction: column;
-  overflow-y: auto;
-}
 
-#headBar {
+.close-bar {
   width: 100%;
   height: 2em;
+  border-top-left-radius: 3px;
   flex-shrink: 0;
   background-color: rgb(19, 207, 19);
   border: none;
@@ -49,17 +20,7 @@ form input::placeholder {
   margin: 0;
   outline: none;
 }
-#headBar:hover{
-  cursor: pointer;
-}
-#contentWrapper {
-  flex: 1;
-}
-.chatPage {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
+
 .hidden {
   display: none;
 }
@@ -69,14 +30,6 @@ form input::placeholder {
   bottom: 0;
   width: 260px;
 }
-.webPage {
-  height: 200%;
-  width: 100%;
-}
-#messagewrapper {
-  overflow-y: auto;
-  flex: 1;
-}
 
 .loginPage {
   height: 100%;
@@ -84,41 +37,73 @@ form input::placeholder {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #fff;
+  background-color: #000;
   margin: 0;
 }
-
-.userNameInput {
-  font-size: 1em;
-  width: 128px;
-  height: 128px;
-  background: #fff;
-  color: black;
-  border: none;
+.loginPage input{
+  text-align: center;
   outline: none;
+  border: none;
+  background-color: #000;
+  border-bottom: solid blue 3px;
+  color: #fff;
+  caret-color: blue;
 }
-.userNameInput::placeholder {
-  color: #a3a3a3;
+.loginPage input::placeholder {
+  color: #fff;
 }
 
-.userWritten {
-  float: right;
-  width: 75%;
-  text-align: left;
+.chat-page {
+  height: 330px;
+  width: 260px;
+  border-left: solid #a3a3a3  1px;
+  border-right: solid #a3a3a3  1px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+.chat-message-input {
+  border-top: thin #a3a3a3 solid;
+  display: flex;
+  flex-direction: row
+}
+
+.chat-message-input input {
+  padding: 0.5em;
+  flex: 1;
+  outline: none;
+  border: none;
+}
+.chat-message-input button {
+  padding: 0.5em;
+  background:  rgb(19, 207, 19);
+  color: #fff;
+  border: none;
+}
+.messages {
+  flex-grow: 1;
+}
+.current-user {
+  display: flex;
+  justify-content: flex-end;
+}
+.current-user div {
   background: rgb(19, 207, 19);
   color: #fff;
-  padding: 10%;
+  padding: 0.5rem;
   margin: 1px;
-  border-radius: 5px;
+  border-radius: 10px;
+  border-top-right-radius: 0;
 }
-
-.othersWritten {
-  float: left;
-  width: 75%;
+.other-user {
+  display: flex;
+  justify-content: flex-start;
+}
+.other-user div {
   background: #bababa;
   color: #000;
-  text-align: left;
-  padding: 10%;
+  padding: 0.5rem;
   margin: 1px;
-  border-radius: 5px;
+  border-radius: 10px;
+  border-top-left-radius: 0;
 }
