--- a/public/stylesheets/css/chat.css
+++ b/public/stylesheets/css/chat.css
@@ -107,3 +107,8 @@
   border-radius: 10px;
   border-top-left-radius: 0;
 }
+.user-picture {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+}
